--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <a href="#">Sign up</a>
     </div>
 </nav>
-<section class="main_content">
-    <div class="main_content__slider">
+<section class="main-content">
+    <div class="main-content__slider">
         <img src="https://66.media.tumblr.com/1ad0c5861ab2b01ebfc65334d302a2ad/tumblr_ow4o6twG151vo4heao5_250.png">
     </div>
     <button>Tenants</button>
@@ -54,7 +54,7 @@
         </form>
     </div>
 </section>
-<section class="buy_sell_rent">
+<section class="buy_sell-rent">
     <div>
         <img src="https://i.pinimg.com/236x/96/b0/41/96b041b5160240373c6205074d734f62.jpg" width="20px" height="20px"/>
         <h2>Buy a home</h2>
@@ -72,56 +72,56 @@
     </div>
 </section>
 <section class="photos">
-    <div class="photos__photo_element">
+    <div class="photos__photo-element">
         <img src="https://w7.pngwing.com/pngs/768/298/png-transparent-tantrix-tetris-h5gamebox-puzzle-key-crossword-clue-game-text-logo.png" height="150px" width="150px"/>
         <div class="photos_photo-element_text">
             <h2>4450, asdasdsa, Byblik st., 4021, TX208</h2>
             <img src="https://png.pngtree.com/png-vector/20190118/ourmid/pngtree-child-magnifying-glass-illustration-black-magnifier-yellow-handle-blue-lens-png-image_452846.jpg" width="20px" height="20px"/>
         </div>
     </div>
-    <div class="photos__photo_element">
+    <div class="photos__photo-element">
         <img src="https://w7.pngwing.com/pngs/768/298/png-transparent-tantrix-tetris-h5gamebox-puzzle-key-crossword-clue-game-text-logo.png" height="150px" width="150px"/>
         <div class="photos_photo-element_text">
             <h2>4450, asdasdsa, Byblik st., 4021, TX208</h2>
             <img src="https://png.pngtree.com/png-vector/20190118/ourmid/pngtree-child-magnifying-glass-illustration-black-magnifier-yellow-handle-blue-lens-png-image_452846.jpg" width="20px" height="20px"/>
         </div>
     </div>
-    <div class="photos__photo_element">
+    <div class="photos__photo-element">
         <img src="https://w7.pngwing.com/pngs/768/298/png-transparent-tantrix-tetris-h5gamebox-puzzle-key-crossword-clue-game-text-logo.png" height="150px" width="150px"/>
         <div class="photos_photo-element_text">
             <h2>4450, asdasdsa, Byblik st., 4021, TX208</h2>
             <img src="https://png.pngtree.com/png-vector/20190118/ourmid/pngtree-child-magnifying-glass-illustration-black-magnifier-yellow-handle-blue-lens-png-image_452846.jpg" width="20px" height="20px"/>
         </div>
     </div>
-    <div class="photos__photo_element">
+    <div class="photos__photo-element">
         <img src="https://w7.pngwing.com/pngs/768/298/png-transparent-tantrix-tetris-h5gamebox-puzzle-key-crossword-clue-game-text-logo.png" height="150px" width="150px"/>
         <div class="photos_photo-element_text">
             <h2>4450, asdasdsa, Byblik st., 4021, TX208</h2>
             <img src="https://png.pngtree.com/png-vector/20190118/ourmid/pngtree-child-magnifying-glass-illustration-black-magnifier-yellow-handle-blue-lens-png-image_452846.jpg" width="20px" height="20px"/>
         </div>
     </div>
-    <div class="photos__photo_element">
+    <div class="photos__photo-element">
         <img src="https://w7.pngwing.com/pngs/768/298/png-transparent-tantrix-tetris-h5gamebox-puzzle-key-crossword-clue-game-text-logo.png" height="150px" width="150px"/>
         <div class="photos_photo-element_text">
             <h2>4450, asdasdsa, Byblik st., 4021, TX208</h2>
             <img src="https://png.pngtree.com/png-vector/20190118/ourmid/pngtree-child-magnifying-glass-illustration-black-magnifier-yellow-handle-blue-lens-png-image_452846.jpg" width="20px" height="20px"/>
         </div>
     </div>
-    <div class="photos__photo_element">
+    <div class="photos__photo-element">
         <img src="https://w7.pngwing.com/pngs/768/298/png-transparent-tantrix-tetris-h5gamebox-puzzle-key-crossword-clue-game-text-logo.png" height="150px" width="150px"/>
         <div class="photos_photo-element_text">
             <h2>4450, asdasdsa, Byblik st., 4021, TX208</h2>
             <img src="https://png.pngtree.com/png-vector/20190118/ourmid/pngtree-child-magnifying-glass-illustration-black-magnifier-yellow-handle-blue-lens-png-image_452846.jpg" width="20px" height="20px"/>
         </div>
     </div>
-    <div class="photos__photo_element">
+    <div class="photos__photo-element">
         <img src="https://w7.pngwing.com/pngs/768/298/png-transparent-tantrix-tetris-h5gamebox-puzzle-key-crossword-clue-game-text-logo.png" height="150px" width="150px"/>
         <div class="photos_photo-element_text">
             <h2>4450, asdasdsa, Byblik st., 4021, TX208</h2>
             <img src="https://png.pngtree.com/png-vector/20190118/ourmid/pngtree-child-magnifying-glass-illustration-black-magnifier-yellow-handle-blue-lens-png-image_452846.jpg" width="20px" height="20px"/>
         </div>
     </div>
-    <div class="photos__photo_element">
+    <div class="photos__photo-element">
         <img src="https://w7.pngwing.com/pngs/768/298/png-transparent-tantrix-tetris-h5gamebox-puzzle-key-crossword-clue-game-text-logo.png" height="150px" width="150px"/>
         <div class="photos_photo-element_text">
             <h2>4450, asdasdsa, Byblik st., 4021, TX208</h2>
@@ -129,6 +129,71 @@
         </div>
     </div>
 </section>
-
+<section class="registration-subscribe-login">
+    <div class="wrapper">
+        <div class="registration-subscribe-login__login">
+            <form class="registration-subscribe-login__login__login-form">
+                <span>Member login</span>
+                <input class="registration-subscribe-login__login__subscribe-form__user-name" placeholder="User name"
+                       type="text">
+                <input class="registration-subscribe-login__login__subscribe-form__user-password" placeholder="Password"
+                       type="text">
+                <button class="login">Login</button>
+            </form>
+        </div>
+        <div class="registration-subscribe-login__subscribe">
+            <form class="registration-subscribe-login__login__subscribe-form">
+                <span>Subscribe to our weekly newsletter</span>
+                <input class="registration-subscribe-login__login__subscribe-form__user-email"
+                       placeholder="email address" type="text">
+                <button class="registration-subscribe-login__login__subscribe-form__subscribe">Login</button>
+            </form>
+        </div>
+        <div class="registration-subscribe-login__sign-up">
+            <div>
+                <span>Not a member yet</span>
+                <label>
+                    <div><a href="#">Signup Now</a></div>
+                </label>
+            </div>
+        </div>
+        <div class="registration-subscribe-login__social-networks">
+            <img src="images/facebook.png" alt="facebook">
+            <img src="images/twitter.png" alt="twitter">
+            <img src="images/google%20+.png" alt="google+">
+        </div>
+    </div>
+</section>
+<footer class="footer">
+    <div class="wrapper">
+        <div class="footer__about-us">
+            <span>About us</span>
+            <a href="#">About us</a>
+            <a href="#">Why us</a>
+            <a href="#">Customer Stories</a>
+            <a href="#">Press Resources</a>
+            <a href="#">Press Releases</a>
+            <a href="#">Contact Us</a>
+        </div>
+        <div class="footer__proparties">
+            <span>Proparties</span>
+            <a href="#">Rent a home</a>
+            <a href="#">Lease a home</a>
+            <a href="#">Buy a home</a>
+            <a href="#">Sell a home</a>
+            <a href="#">Ask advices</a>
+        </div>
+        <div class="footer__proparties">
+            <span>Customer testimonials</span>
+            <span>Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industr
+                    standard dummy text ever since the 1500s,
+                    when an unknown printer took a
+            </span>
+            <a href="#">Lorem Ipsum is simply</a>
+            <a href="#"> Owner, Lorem Ipsum</a>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
